Fixed dark mode and added a congradulations popup if game is won

--- a/src/Components/styles.css
+++ b/src/Components/styles.css
@@ -328,3 +328,70 @@
 		margin-right: 0;
 	}
 }
+
+/* Congradulation */
+
+.congradulations-modal-container {
+    display: flex;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(0, 0, 0, .3);
+}
+
+.congradulations-modal {
+    position: fixed;
+    background-color: var(--text-color);
+    border-radius: 5px;
+    font-family: "Roboto", sans-serif;
+    color: var(--modal-background-color);
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    top: 10vh;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+    max-width: 500px;
+}
+
+.show-congradulations-false {
+	display: none;
+}
+
+.show-congradulations-true {
+	opacity: 0;
+	animation-name: congradulations-animation;
+	animation-delay: 4.5s;
+	animation-duration: 100ms;
+	animation-fill-mode: forwards;
+}
+
+.congradulations-button {
+	width: 65%;
+	height: 3em;
+	margin-left: auto;
+	margin-right: auto;
+	border: none;
+	border-radius: 4px;
+	font-weight: bold;
+	font-size: 1em;
+	padding: 5px;
+	background-color: var(--key-color-green);
+}
+
+@keyframes congradulations-animation {
+	0% {
+		opacity: 100%;
+		
+	}
+	100% {
+		opacity: 100%;
+		
+	}
+}
